--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,7 +6,8 @@ server.servlet.context-path = /api/academico
 application.name = Sistema Academico
 
 #EM AMBIENTE DE PRODUÇÃO A LINHA ABAIXO DEVERÁ SER COMENTADA
-server.error.include-message=always
+#server.error.include-message=always
+#server.error.include-stacktrace=always
 
 #CONFIGURAÇÕES DE CONEXÃO COM O BANCO DE DADOS
 spring.datasource.url=jdbc:h2:mem:AcademicoDB
