Adição do Swagger

--- a/src/main/resources/application-h2.properties
+++ b/src/main/resources/application-h2.properties
@@ -1,23 +1,24 @@
 #https://docs.spring.io/spring-boot/docs/current/reference/html/application-properties.html
 
-#CONFIGURAï¿½ï¿½O DO SERVIDOR
-server.port=8090
-server.servlet.context-path = /api/academico
-application.name = Sistema Academico
+#CONFIGURAÇÃO DO SERVIDOR
+server.port=8080
+server.servlet.context-path=/api/academico
+application.name=Sistema Academico
 
-#EM AMBIENTE DE PRODUï¿½ï¿½O A LINHA ABAIXO DEVERï¿½ SER COMENTADA
-server.error.include-message=always
+#EM AMBIENTE DE PRODUÇÃO A LINHA ABAIXO DEVERÁ SER COMENTADA
+#server.error.include-message=always
+#server.error.include-stacktrace=always
 
-#CONFIGURAï¿½ï¿½ES DE CONEXï¿½O COM O BANCO DE DADOS
+#CONFIGURAÇÕES DE CONEXÃO COM O BANCO DE DADOS
 spring.datasource.url=jdbc:h2:mem:AcademicoDB
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
-#CONFIGURAï¿½ï¿½O QUE DEFINE A FORMA COMO O MAPEAMENTO DO JPA IRï¿½ TRABALHAR
+#CONFIGURAÇÃO QUE DEFINE A FORMA COMO O MAPEAMENTO DO JPA IRÁ TRABALHAR
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-#CONFIGURAï¿½ï¿½ES ESPECï¿½FICAS PARA O BANCO DE DADOS H2
+#CONFIGURAÇÕES ESPECÍFICAS PARA O BANCO DE DADOS H2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 
@@ -25,5 +26,5 @@ spring.h2.console.path=/h2
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-#CONFIGURAï¿½ï¿½O DO SWAGGER
+#CONFIGURAÇÃO DO SWAGGER
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
